# esp_anemometer_ulp

components/anemometer_ulp/: CMakeLists.txt  __init__.py  anemometer_ulp.cpp  anemometer_ulp.h  sensor.py  ulp_anemometer_bin.h  ulp_binary.S
components/anemometer_ulp/ulp_src/: main.c
